--- a/companion/src/apppreferencesdialog.ui
+++ b/companion/src/apppreferencesdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>685</width>
-    <height>431</height>
+    <height>462</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -493,14 +493,14 @@
        <string>Radio Settings</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="7" column="1" colspan="5">
+       <item row="8" column="1" colspan="5">
         <widget class="Line" name="line_6">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
-       <item row="3" column="5">
+       <item row="4" column="5">
         <widget class="QLabel" name="imageLabel">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -534,7 +534,7 @@
          </property>
         </widget>
        </item>
-       <item row="10" column="0">
+       <item row="11" column="0">
         <widget class="QLabel" name="label_13">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -550,7 +550,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="QLineEdit" name="SplashFileName">
          <property name="enabled">
           <bool>true</bool>
@@ -566,7 +566,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1" colspan="3">
+       <item row="2" column="1" colspan="3">
         <widget class="QLineEdit" name="sdPath">
          <property name="enabled">
           <bool>true</bool>
@@ -582,7 +582,7 @@
          </property>
         </widget>
        </item>
-       <item row="12" column="1" colspan="3">
+       <item row="13" column="1" colspan="3">
         <widget class="QCheckBox" name="burnFirmware">
          <property name="text">
           <string>Offer to write FW to Tx after download</string>
@@ -599,35 +599,35 @@
          </property>
         </widget>
        </item>
-       <item row="12" column="5">
-        <widget class="QPushButton" name="ProfSave_PB">
+       <item row="13" column="5">
+        <widget class="QPushButton" name="removeProfileButton">
          <property name="text">
-          <string>Save Profile</string>
+          <string>Remove Profile</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="5">
+       <item row="2" column="5">
         <widget class="QPushButton" name="sdPathButton">
          <property name="text">
           <string>Open Folder</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="5">
+       <item row="7" column="5">
         <widget class="QPushButton" name="clearImageButton">
          <property name="text">
           <string>Clear Image</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1" colspan="5">
+       <item row="3" column="1" colspan="5">
         <widget class="Line" name="line_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
-       <item row="10" column="1" colspan="2">
+       <item row="11" column="1" colspan="2">
         <widget class="QComboBox" name="channelorderCB">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -777,7 +777,7 @@ This is used by the templated to determine which channel goes to what number out
          </item>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="sdPathLabel">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -793,7 +793,7 @@ This is used by the templated to determine which channel goes to what number out
          </property>
         </widget>
        </item>
-       <item row="1" column="4">
+       <item row="2" column="4">
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -806,7 +806,7 @@ This is used by the templated to determine which channel goes to what number out
          </property>
         </spacer>
        </item>
-       <item row="8" column="1">
+       <item row="9" column="1">
         <widget class="QComboBox" name="stickmodeCB">
          <property name="maximumSize">
           <size>
@@ -860,7 +860,7 @@ Mode 4:
          </item>
         </widget>
        </item>
-       <item row="8" column="0">
+       <item row="9" column="0">
         <widget class="QLabel" name="label_14">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -873,7 +873,14 @@ Mode 4:
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="6" column="5">
+        <widget class="QPushButton" name="SplashSelect">
+         <property name="text">
+          <string>Select Image</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
         <widget class="QLabel" name="label_8">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -886,17 +893,10 @@ Mode 4:
          </property>
         </widget>
        </item>
-       <item row="11" column="1" colspan="3">
+       <item row="12" column="1" colspan="3">
         <widget class="QCheckBox" name="renameFirmware">
          <property name="text">
           <string>Append version number to FW file name</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="5">
-        <widget class="QPushButton" name="SplashSelect">
-         <property name="text">
-          <string>Edit Image</string>
          </property>
         </widget>
        </item>
@@ -907,7 +907,7 @@ Mode 4:
          </property>
         </widget>
        </item>
-       <item row="13" column="1">
+       <item row="14" column="1">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -920,6 +920,29 @@ Mode 4:
          </property>
         </spacer>
        </item>
+       <item row="1" column="1">
+        <widget class="QSpinBox" name="ProfSlot_SB">
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>10</number>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Profile Index</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </widget>
@@ -927,7 +950,41 @@ Mode 4:
   </layout>
  </widget>
  <tabstops>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>ge_lineedit</tabstop>
+  <tabstop>ge_pathButton</tabstop>
+  <tabstop>historySize</tabstop>
+  <tabstop>showSplash</tabstop>
+  <tabstop>startupCheck_fw</tabstop>
+  <tabstop>startupCheck_companion9x</tabstop>
+  <tabstop>wizardEnable_ChkB</tabstop>
+  <tabstop>backupPath</tabstop>
+  <tabstop>backupPathButton</tabstop>
+  <tabstop>backupEnable</tabstop>
+  <tabstop>splashincludeCB</tabstop>
+  <tabstop>libraryPath</tabstop>
+  <tabstop>libraryPathButton</tabstop>
   <tabstop>buttonBox</tabstop>
+  <tabstop>snapshotPath</tabstop>
+  <tabstop>snapshotPathButton</tabstop>
+  <tabstop>snapshotClipboardCKB</tabstop>
+  <tabstop>simuSW</tabstop>
+  <tabstop>backLightColor</tabstop>
+  <tabstop>joystickCB</tabstop>
+  <tabstop>joystickChkB</tabstop>
+  <tabstop>joystickcalButton</tabstop>
+  <tabstop>ProfName_LE</tabstop>
+  <tabstop>ProfSlot_SB</tabstop>
+  <tabstop>sdPath</tabstop>
+  <tabstop>sdPathButton</tabstop>
+  <tabstop>SplashFileName</tabstop>
+  <tabstop>SplashSelect</tabstop>
+  <tabstop>clearImageButton</tabstop>
+  <tabstop>stickmodeCB</tabstop>
+  <tabstop>channelorderCB</tabstop>
+  <tabstop>renameFirmware</tabstop>
+  <tabstop>burnFirmware</tabstop>
+  <tabstop>removeProfileButton</tabstop>
  </tabstops>
  <resources>
   <include location="companion.qrc"/>
@@ -940,8 +997,8 @@ Mode 4:
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>376</x>
-     <y>596</y>
+     <x>382</x>
+     <y>455</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -956,8 +1013,8 @@ Mode 4:
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>396</x>
-     <y>596</y>
+     <x>402</x>
+     <y>455</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
