--- a/companion/src/simulation/simulatordialog-9x.ui
+++ b/companion/src/simulation/simulatordialog-9x.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>653</width>
+    <width>739</width>
     <height>613</height>
    </rect>
   </property>
@@ -73,23 +73,7 @@
        <number>6</number>
       </property>
       <item row="0" column="0">
-       <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
-        <item row="1" column="2">
-         <widget class="mySlider" name="trimVLeft">
-          <property name="toolTip">
-           <string>Right Double Click to Reset</string>
-          </property>
-          <property name="minimum">
-           <number>-125</number>
-          </property>
-          <property name="maximum">
-           <number>125</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-         </widget>
-        </item>
+       <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0">
         <item row="1" column="1">
          <widget class="QGraphicsView" name="leftStick">
           <property name="minimumSize">
@@ -360,7 +344,7 @@ QPushButton:checked {
           </item>
          </layout>
         </item>
-        <item row="7" column="1">
+        <item row="8" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout_6">
           <property name="leftMargin">
            <number>20</number>
@@ -391,42 +375,126 @@ QPushButton:checked {
          </layout>
         </item>
         <item row="2" column="1">
-         <widget class="mySlider" name="trimHLeft">
-          <property name="toolTip">
-           <string>Right Double Click to Reset</string>
-          </property>
-          <property name="minimum">
-           <number>-125</number>
-          </property>
-          <property name="maximum">
-           <number>125</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QPushButton" name="trimHL_L">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">&lt;-</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="mySlider" name="trimHLeft">
+            <property name="toolTip">
+             <string>Right Double Click to Reset</string>
+            </property>
+            <property name="minimum">
+             <number>-125</number>
+            </property>
+            <property name="maximum">
+             <number>125</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="trimHL_R">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">-&gt;</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="1" column="2">
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <widget class="QPushButton" name="trimVL_U">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">^</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="mySlider" name="trimVLeft">
+            <property name="toolTip">
+             <string>Right Double Click to Reset</string>
+            </property>
+            <property name="minimum">
+             <number>-125</number>
+            </property>
+            <property name="maximum">
+             <number>125</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="trimVL_D">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">v</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
       <item row="0" column="2">
-       <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0">
-        <item row="1" column="0">
-         <widget class="mySlider" name="trimVRight">
-          <property name="toolTip">
-           <string>Right Double Click to Reset</string>
-          </property>
-          <property name="minimum">
-           <number>-125</number>
-          </property>
-          <property name="maximum">
-           <number>125</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
+       <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0,0">
+        <item row="1" column="2">
          <widget class="QGraphicsView" name="rightStick">
           <property name="minimumSize">
            <size>
@@ -442,7 +510,7 @@ QPushButton:checked {
           </property>
          </widget>
         </item>
-        <item row="1" column="2">
+        <item row="1" column="3">
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
            <widget class="QPushButton" name="switchTRN">
@@ -609,7 +677,7 @@ QPushButton:checked {
           </item>
          </layout>
         </item>
-        <item row="0" column="1">
+        <item row="0" column="2">
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <widget class="QPushButton" name="holdRightX">
@@ -733,7 +801,7 @@ QPushButton:checked {
           </item>
          </layout>
         </item>
-        <item row="3" column="1">
+        <item row="4" column="2">
          <layout class="QHBoxLayout" name="horizontalLayout_7">
           <property name="leftMargin">
            <number>20</number>
@@ -763,21 +831,121 @@ QPushButton:checked {
           </item>
          </layout>
         </item>
-        <item row="2" column="1">
-         <widget class="mySlider" name="trimHRight">
-          <property name="toolTip">
-           <string>Right Double Click to Reset</string>
-          </property>
-          <property name="minimum">
-           <number>-125</number>
-          </property>
-          <property name="maximum">
-           <number>125</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
+        <item row="2" column="2">
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QPushButton" name="trimHR_L">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">&lt;-</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="mySlider" name="trimHRight">
+            <property name="toolTip">
+             <string>Right Double Click to Reset</string>
+            </property>
+            <property name="minimum">
+             <number>-125</number>
+            </property>
+            <property name="maximum">
+             <number>125</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="trimHR_R">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">-&gt;</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="1" column="1">
+         <layout class="QVBoxLayout" name="verticalLayout_4">
+          <item>
+           <widget class="QPushButton" name="trimVR_U">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">^</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="mySlider" name="trimVRight">
+            <property name="toolTip">
+             <string>Right Double Click to Reset</string>
+            </property>
+            <property name="minimum">
+             <number>-125</number>
+            </property>
+            <property name="maximum">
+             <number>125</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="trimVR_D">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>23</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string notr="true">v</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
