--- a/companion/src/generaledit.ui
+++ b/companion/src/generaledit.ui
@@ -106,7 +106,7 @@
 These will be relevant for all models in the same EEPROM.</string>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tabSetup">
       <attribute name="title">
@@ -2381,7 +2381,7 @@ Acceptable values are 5v..10v</string>
        <item row="4" column="5">
         <widget class="QLabel" name="label_pot4">
          <property name="text">
-          <string>POT 4</string>
+          <string>Pot. 4</string>
          </property>
         </widget>
        </item>
@@ -2395,7 +2395,7 @@ Acceptable values are 5v..10v</string>
        <item row="3" column="5">
         <widget class="QLabel" name="label_pot3">
          <property name="text">
-          <string>POT 3</string>
+          <string>Pot. 3</string>
          </property>
         </widget>
        </item>
@@ -2415,14 +2415,14 @@ Acceptable values are 5v..10v</string>
        <item row="2" column="5">
         <widget class="QLabel" name="label_pot2">
          <property name="text">
-          <string>POT 2</string>
+          <string>Pot. 2</string>
          </property>
         </widget>
        </item>
        <item row="1" column="5">
         <widget class="QLabel" name="label_pot1">
          <property name="text">
-          <string>POT 1</string>
+          <string>Pot. 1</string>
          </property>
         </widget>
        </item>
@@ -2449,7 +2449,7 @@ Acceptable values are 5v..10v</string>
        <item row="3" column="0">
         <widget class="QLabel" name="label_17">
          <property name="text">
-          <string>STICK 3</string>
+          <string>Stick 3</string>
          </property>
         </widget>
        </item>
@@ -2486,7 +2486,7 @@ Acceptable values are 5v..10v</string>
        <item row="1" column="0">
         <widget class="QLabel" name="label_15">
          <property name="text">
-          <string>STICK 1</string>
+          <string>Stick 1</string>
          </property>
         </widget>
        </item>
@@ -2535,7 +2535,7 @@ Acceptable values are 5v..10v</string>
        <item row="2" column="0">
         <widget class="QLabel" name="label_16">
          <property name="text">
-          <string>STICK 2</string>
+          <string>Stick 2</string>
          </property>
         </widget>
        </item>
@@ -2620,7 +2620,7 @@ Acceptable values are 5v..10v</string>
        <item row="4" column="0">
         <widget class="QLabel" name="label_18">
          <property name="text">
-          <string>STICK 4</string>
+          <string>Stick 4</string>
          </property>
         </widget>
        </item>
