--- a/companion/src/modeledit/heli.ui
+++ b/companion/src/modeledit/heli.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QGridLayout" name="gridLayout" columnstretch="0,1" columnminimumwidth="100,0">
    <property name="horizontalSpacing">
